# intern-screener-2024-public

./: .gitignore  Cargo.toml  README.md  debug.go  go.mod  main.go  main.py  model.go  model.py  serializer.go  test.py
src/: docker.rs  lib.rs  main.rs  messages.rs  network.rs  progress.rs
task/: Cargo.toml  main.py  savefile.py  serializer.py
task/src/: main.rs
tests/: integration_test.rs
